Exposes mongoDB port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
   mongo:
     image: mongo:4.1
     restart: always
+    ports:
+      - "27017:27017"
     volumes:
       - mdb-data:/data/db
     environment:
